--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Register</title>
+    <meta charset="UTF-8">
+    <title>Register - DDoS Protection</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
-    <h2>Register</h2>
     <form method="post">
-        <input name="username" placeholder="Username" required><br>
-        <input name="password" type="password" placeholder="Password" required><br>
-        <button type="submit">Register</button>
+        <h2>Register</h2>
+        <input type="text" name="username" placeholder="Choose Username" required>
+        <input type="password" name="password" placeholder="Choose Password" required>
+        <input type="submit" value="Register">
+        <a href="/">Already have an account? Login</a>
     </form>
-    <p>Already registered? <a href="/">Login</a></p>
 </body>
 
 </html>
