--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Login</title>
+    <meta charset="UTF-8">
+    <title>Login - DDoS Protection</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
-    <h2>Login</h2>
     <form method="post">
-        <input name="username" placeholder="Username" required><br>
-        <input name="password" type="password" placeholder="Password" required><br>
-        <button type="submit">Login</button>
+        <h2>Login</h2>
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="submit" value="Login">
+        <a href="/register">Don't have an account? Register</a>
     </form>
-    <p>No account? <a href="/register">Register here</a></p>
 </body>
 
 </html>
