Footer and table alignment

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,7 +48,7 @@
         <button onclick="monitorDomain()">Monitor Domain</button>
     </div>
 
-    <div class="table-container">
+    <div class="table-container" style="max-height: 400px; overflow-y: auto;">
         <table>
             <thead>
                 <tr>
@@ -135,7 +135,10 @@
         }
     </script>
 
-
+    <footer style="text-align: center; margin-top: 20px; padding: 10px; color: #bbb;font-size: 14px;">
+        Developed by <a href="https://github.com/samuelkcherian" target="_blank"
+            style="color: #c57bff; text-decoration: none;">Samuel</a>
+    </footer>
 </body>
 
 </html>
