Added Detecting suspicious spikes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -136,7 +136,7 @@
     </script>
 
     <footer style="text-align: center; margin-top: 20px; padding: 10px; color: #bbb;font-size: 14px;">
-        Developed by <a href="https://github.com/samuelkcherian" target="_blank"
+        © 2025. Developed by <a href="https://github.com/samuelkcherian" target="_blank"
             style="color: #c57bff; text-decoration: none;">Samuel</a>
     </footer>
 </body>
