--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
     <style>
         body {
             cursor: none;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         .trail {
@@ -69,7 +69,7 @@
             fetch("/data")
                 .then(res => res.json())
                 .then(data => {
-                    const table = document.getElementById("table-body");
+                    const tableBody = document.getElementById("trafficTable");
                     tableBody.innerHTML = "";
 
                     data.forEach(entry => {
@@ -166,7 +166,7 @@
                 });
         }
     </script>
-
+    <link rel="icon" href="data:,">
     <footer style="text-align: center; margin-top: 20px; padding: 10px; color: #bbb;font-size: 14px;">
         © 2025. Developed by <a href="https://github.com/samuelkcherian" target="_blank"
             style="color: #c57bff; text-decoration: none;">Samuel</a>
