--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -115,8 +115,10 @@
                     });
                 });
         }
+    </script>
 
 
+    <script>
         function unblockIP(ip) {
             fetch("/unblock", {
                 method: "POST",
